# dwm-status-bar-rs

./: Cargo.toml  README.md
src/: main.rs
